force-app/main/default/objects/Asset/fields/Acces_a_internet__c.field-meta.xml
<CustomField>
    <fullName>Acces_a_internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accès à internet</label>
    <type>Checkbox</type>
</CustomField>