force-app/main/default/objects/Asset/fields/Accessoire__c.field-meta.xml
<CustomField>
    <fullName>Accessoire__c</fullName>
    <label>Accessoire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DVD</fullName>
            </value>
            <value>
                <fullName>Console de jeux</fullName>
            </value>
            <value>
                <fullName>Magnétoscope</fullName>
            </value>
            <value>
                <fullName>Divers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>