force-app/main/default/objects/Asset/fields/Accessoires_foyer__c.field-meta.xml
<CustomField>
    <fullName>Accessoires_foyer__c</fullName>
    <label>Accessoires foyer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Routeur MMAT</fullName>
            </value>
            <value>
                <fullName>Switch Ethernet</fullName>
            </value>
            <value>
                <fullName>Répéteur Wifi</fullName>
            </value>
            <value>
                <fullName>Adaptateur CPL Wifi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>