force-app/main/default/objects/Asset/fields/Accessoires_reprise_audio__c.field-meta.xml
<CustomField>
    <fullName>Accessoires_reprise_audio__c</fullName>
    <label>Accessoires reprise audio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dydac Optique</fullName>
            </value>
            <value>
                <fullName>Dydac Spdif</fullName>
            </value>
            <value>
                <fullName>Convertisseur non Dolby</fullName>
            </value>
            <value>
                <fullName>Micro Externe</fullName>
            </value>
            <value>
                <fullName>Micro Interne</fullName>
            </value>
            <value>
                <fullName>Bobine</fullName>
            </value>
            <value>
                <fullName>Casque</fullName>
            </value>
            <value>
                <fullName>Barre de son</fullName>
            </value>
            <value>
                <fullName>Câble audio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>