force-app/main/default/objects/Asset/fields/Accessoires_type_sonde_TV__c.field-meta.xml
<CustomField>
    <fullName>Accessoires_type_sonde_TV__c</fullName>
    <label>Accessoires type sonde TV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sonde filaire V3</fullName>
            </value>
            <value>
                <fullName>Sonde Bluetooth V5</fullName>
            </value>
            <value>
                <fullName>Sonde STV6</fullName>
            </value>
            <value>
                <fullName>Dongle USB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>