force-app/main/default/objects/Asset/fields/Adaptateur_cpl_wifi__c.field-meta.xml
<CustomField>
    <fullName>Adaptateur_cpl_wifi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptateur CPL Wifi</label>
    <type>Checkbox</type>
</CustomField>