force-app/main/default/objects/Asset/fields/Alerte_maj_stock__c.field-meta.xml
<CustomField>
    <fullName>Alerte_maj_stock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerte maj stock</label>
    <type>Checkbox</type>
</CustomField>