force-app/main/default/objects/Asset/fields/Ampli_home_cinema__c.field-meta.xml
<CustomField>
    <fullName>Ampli_home_cinema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ampli home cinéma</label>
    <type>Checkbox</type>
</CustomField>