force-app/main/default/objects/Asset/fields/Annee_d_achat__c.field-meta.xml
<CustomField>
    <fullName>Annee_d_achat__c</fullName>
    <label>Année d&apos;achat</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>