force-app/main/default/objects/Asset/fields/Antenne_gsm_deportee__c.field-meta.xml
<CustomField>
    <fullName>Antenne_gsm_deportee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antenne GSM déportée</label>
    <type>Checkbox</type>
</CustomField>