force-app/main/default/objects/Asset/fields/Appel_OK_KO__c.field-meta.xml
<CustomField>
    <fullName>Appel_OK_KO__c</fullName>
    <label>Appel OK/KO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>KO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>