force-app/main/default/objects/Asset/fields/ASS_ExtId_Ocom__c.field-meta.xml
<CustomField>
    <fullName>ASS_ExtId_Ocom__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>ASS_ExtId_Ocom</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>