force-app/main/default/objects/Asset/fields/Audimetre__c.field-meta.xml
<CustomField>
    <fullName>Audimetre__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Audimètre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>