force-app/main/default/objects/Asset/fields/Audimetre_poste__c.field-meta.xml
<CustomField>
    <fullName>Audimetre_poste__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audimètre Poste</label>
    <length>30</length>
    <type>Text</type>
</CustomField>