force-app/main/default/objects/Asset/fields/Autre_usage__c.field-meta.xml
<CustomField>
    <fullName>Autre_usage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autre usage +</label>
    <type>Checkbox</type>
</CustomField>