force-app/main/default/objects/Asset/fields/Bande_Usine__c.field-meta.xml
<CustomField>
    <fullName>Bande_Usine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bande Usine</label>
    <referenceTo>Bande_Usine__c</referenceTo>
    <relationshipLabel>Équipements de mesure</relationshipLabel>
    <relationshipName>Equipements_de_mesure</relationshipName>
    <type>Lookup</type>
</CustomField>