force-app/main/default/objects/Asset/fields/Cable_Attenuateur__c.field-meta.xml
<CustomField>
    <fullName>Cable_Attenuateur__c</fullName>
    <label>Câble Atténuateur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Cable atténuateur CH Gris</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Cable atténuateur FR Noir</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>