force-app/main/default/objects/Asset/fields/Camescope__c.field-meta.xml
<CustomField>
    <fullName>Camescope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Camescope</label>
    <type>Checkbox</type>
</CustomField>