force-app/main/default/objects/Asset/fields/Carte_sim__c.field-meta.xml
<CustomField>
    <fullName>Carte_sim__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Carte SIM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>