force-app/main/default/objects/Asset/fields/Carte_SIM_active__c.field-meta.xml
<CustomField>
    <fullName>Carte_SIM_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carte SIM active</label>
    <type>Checkbox</type>
</CustomField>