force-app/main/default/objects/Asset/fields/Code_QR__c.field-meta.xml
<CustomField>
    <fullName>Code_QR__c</fullName>
    <formula>Name + &apos;,&apos; +  Audimetre__c + &apos;,&apos; +  TEXT(Numero_IMEI__c) + &apos;,&apos;  + TEXT(DAY( Date_de_production__c )) +  TEXT(MONTH(Date_de_production__c )) +  RIGHT(TEXT(YEAR(Date_de_production__c )), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code QR</label>
    <type>Text</type>
</CustomField>