force-app/main/default/objects/Asset/fields/Combine_dvd_mag__c.field-meta.xml
<CustomField>
    <fullName>Combine_dvd_mag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combine DVD/Mag</label>
    <type>Checkbox</type>
</CustomField>