force-app/main/default/objects/Asset/fields/Combine_tv_dvd__c.field-meta.xml
<CustomField>
    <fullName>Combine_tv_dvd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Combiné TV - DVD</label>
    <type>Checkbox</type>
</CustomField>