force-app/main/default/objects/Asset/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Commentaire</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>