force-app/main/default/objects/Asset/fields/Communicateur__c.field-meta.xml
<CustomField>
    <fullName>Communicateur__c</fullName>
    <label>Communicateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Interne</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Externe</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>DECT</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Interne + CPL</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>GSM</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Externe + CPL</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>CPL</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>GSM + bluetooth</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Externe + bluetooth</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Wifi</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Ethernet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>