force-app/main/default/objects/Asset/fields/Connectable_a_internet__c.field-meta.xml
<CustomField>
    <fullName>Connectable_a_internet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connectable à internet</label>
    <type>Checkbox</type>
</CustomField>