force-app/main/default/objects/Asset/fields/Convertisseur_cia__c.field-meta.xml
<CustomField>
    <fullName>Convertisseur_cia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convertisseur Dydac</label>
    <type>Checkbox</type>
</CustomField>