force-app/main/default/objects/Asset/fields/D_faut_identifi_en_SAV__c.field-meta.xml
<CustomField>
    <fullName>D_faut_identifi_en_SAV__c</fullName>
    <label>Défaut identifié en SAV</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Liste</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Fournir</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>