force-app/main/default/objects/Asset/fields/Date_Autre_Usage__c.field-meta.xml
<CustomField>
    <fullName>Date_Autre_Usage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Autre Usage</label>
    <type>Date</type>
</CustomField>