force-app/main/default/objects/Asset/fields/Date_d_affectation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_affectation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date d&apos;affectation</label>
    <type>Date</type>
</CustomField>