force-app/main/default/objects/Asset/fields/Date_de_desaffectation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_desaffectation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de désaffectation</label>
    <type>Date</type>
</CustomField>