force-app/main/default/objects/Asset/fields/Date_de_Mise_Hors_Tension__c.field-meta.xml
<CustomField>
    <fullName>Date_de_Mise_Hors_Tension__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de Mise Hors Tension</label>
    <type>Date</type>
</CustomField>