force-app/main/default/objects/Asset/fields/Date_de_premiere_collecte_d_audience__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premiere_collecte_d_audience__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de première collecte d&apos;audience</label>
    <type>Date</type>
</CustomField>