force-app/main/default/objects/Asset/fields/Date_de_premiere_detection__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premiere_detection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de première détection</label>
    <type>Date</type>
</CustomField>