force-app/main/default/objects/Asset/fields/Date_de_premiere_installation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premiere_installation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de première installation</label>
    <type>Date</type>
</CustomField>