force-app/main/default/objects/Asset/fields/Date_derni_re_op_ration__c.field-meta.xml
<CustomField>
    <fullName>Date_derni_re_op_ration__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date dernière opération</label>
    <type>Date</type>
</CustomField>