force-app/main/default/objects/Asset/fields/Date_du_test__c.field-meta.xml
<CustomField>
    <fullName>Date_du_test__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date du test</label>
    <type>Date</type>
</CustomField>