force-app/main/default/objects/Asset/fields/Date_entr_e_en_stock__c.field-meta.xml
<CustomField>
    <fullName>Date_entr_e_en_stock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date entrée en stock</label>
    <type>Date</type>
</CustomField>