force-app/main/default/objects/Asset/fields/Date_entr_e_SAV__c.field-meta.xml
<CustomField>
    <fullName>Date_entr_e_SAV__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date entrée SAV</label>
    <type>Date</type>
</CustomField>