force-app/main/default/objects/Asset/fields/Date_flux_Google__c.field-meta.xml
<CustomField>
    <fullName>Date_flux_Google__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date flux Google</label>
    <type>Date</type>
</CustomField>