force-app/main/default/objects/Asset/fields/Date_r_ception_initiale__c.field-meta.xml
<CustomField>
    <fullName>Date_r_ception_initiale__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date réception initiale</label>
    <type>Date</type>
</CustomField>