force-app/main/default/objects/Asset/fields/Date_sortie_stock__c.field-meta.xml
<CustomField>
    <fullName>Date_sortie_stock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date sortie stock</label>
    <type>Date</type>
</CustomField>