force-app/main/default/objects/Asset/fields/DERNIER_STOCK_CONNU__c.field-meta.xml
<CustomField>
    <fullName>DERNIER_STOCK_CONNU__c</fullName>
    <label>Dernier stock connu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STOCK GENERAL</fullName>
            </value>
            <value>
                <fullName>STOCK SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>