force-app/main/default/objects/Asset/fields/Description_du_test__c.field-meta.xml
<CustomField>
    <fullName>Description_du_test__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description du test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>