force-app/main/default/objects/Asset/fields/Detail_de_la_prise_son__c.field-meta.xml
<CustomField>
    <fullName>Detail_de_la_prise_son__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail de la prise son</label>
    <length>255</length>
    <type>Text</type>
</CustomField>