force-app/main/default/objects/Asset/fields/Disque_dur_integre_console__c.field-meta.xml
<CustomField>
    <fullName>Disque_dur_integre_console__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disque dur intégré console</label>
    <type>Checkbox</type>
</CustomField>