force-app/main/default/objects/Asset/fields/Dvd_enregistreur_sur_disque_dur__c.field-meta.xml
<CustomField>
    <fullName>Dvd_enregistreur_sur_disque_dur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVD enregistreur sur disque dur</label>
    <type>Checkbox</type>
</CustomField>