force-app/main/default/objects/Asset/fields/Dvd_enregistreur_sur_dvd__c.field-meta.xml
<CustomField>
    <fullName>Dvd_enregistreur_sur_dvd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVD enregistreur sur DVD</label>
    <type>Checkbox</type>
</CustomField>