force-app/main/default/objects/Asset/fields/Ecran_3d__c.field-meta.xml
<CustomField>
    <fullName>Ecran_3d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecran 3D</label>
    <type>Checkbox</type>
</CustomField>