force-app/main/default/objects/Asset/fields/Ecran_plat__c.field-meta.xml
<CustomField>
    <fullName>Ecran_plat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ecran plat</label>
    <type>Checkbox</type>
</CustomField>