force-app/main/default/objects/Asset/fields/Emplacement_tele__c.field-meta.xml
<CustomField>
    <fullName>Emplacement_tele__c</fullName>
    <label>Emplacement télé</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Salon</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Chambre des parents</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Cuisine</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Bureau</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Chambre d&apos;amis</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Salle à manger</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Salle à manger/Salon/Séjour</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Chambre des enfants</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Salle de jeux</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>