force-app/main/default/objects/Asset/fields/Equipe_dvd_externe__c.field-meta.xml
<CustomField>
    <fullName>Equipe_dvd_externe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipé DVD externe</label>
    <type>Checkbox</type>
</CustomField>