force-app/main/default/objects/Asset/fields/Equipe_magnetoscope__c.field-meta.xml
<CustomField>
    <fullName>Equipe_magnetoscope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Équipé magnétoscope</label>
    <type>Checkbox</type>
</CustomField>