force-app/main/default/objects/Asset/fields/Equipement_de_mesure__c.field-meta.xml
<CustomField>
    <fullName>Equipement_de_mesure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement de mesure</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Équipements de mesure (Équipement de mesure)</relationshipLabel>
    <relationshipName>Equipements_de_mesure</relationshipName>
    <type>Lookup</type>
</CustomField>