force-app/main/default/objects/Asset/fields/Equipement_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Equipement_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipement du foyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>L&apos;équipement foyer n&apos;appartient pas au foyer choisit.</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Equipements_du_foyer__c.Foyer__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipLabel>Équipements de mesure</relationshipLabel>
    <relationshipName>quipements_de_mesure</relationshipName>
    <type>Lookup</type>
</CustomField>