force-app/main/default/objects/Asset/fields/Etape_derni_re_op_ration__c.field-meta.xml
<CustomField>
    <fullName>Etape_derni_re_op_ration__c</fullName>
    <label>Etape dernière opération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envoi commande (Mediametrie)</fullName>
            </value>
            <value>
                <fullName>Mise en stock (Ingram Micro)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>