force-app/main/default/objects/Asset/fields/Ethernet_Taps__c.field-meta.xml
<CustomField>
    <fullName>Ethernet_Taps__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ethernet Taps</label>
    <length>50</length>
    <type>Text</type>
</CustomField>