force-app/main/default/objects/Asset/fields/Flux__c.field-meta.xml
<CustomField>
    <fullName>Flux__c</fullName>
    <label>Flux sortie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOUS TRAITANCE</fullName>
            </value>
            <value>
                <fullName>STOCK GENERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>