force-app/main/default/objects/Asset/fields/Flux_entr_e__c.field-meta.xml
<CustomField>
    <fullName>Flux_entr_e__c</fullName>
    <label>Flux entrée</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>STOCK GENERAL</fullName>
            </value>
            <value>
                <fullName>RETOUR SAV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>