force-app/main/default/objects/Asset/fields/Force_du_signal_rssi__c.field-meta.xml
<CustomField>
    <fullName>Force_du_signal_rssi__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Force du signal (RSSI)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>