force-app/main/default/objects/Asset/fields/Gommette__c.field-meta.xml
<CustomField>
    <fullName>Gommette__c</fullName>
    <label>Gommette</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jaune</fullName>
            </value>
            <value>
                <fullName>Verte</fullName>
            </value>
            <value>
                <fullName>Rouge</fullName>
            </value>
            <value>
                <fullName>Bleue</fullName>
            </value>
            <value>
                <fullName>Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>