force-app/main/default/objects/Asset/fields/Hd_blu_ray__c.field-meta.xml
<CustomField>
    <fullName>Hd_blu_ray__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HD/Blu-Ray</label>
    <type>Checkbox</type>
</CustomField>