force-app/main/default/objects/Asset/fields/Hors_tension__c.field-meta.xml
<CustomField>
    <fullName>Hors_tension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hors tension</label>
    <type>Checkbox</type>
</CustomField>