force-app/main/default/objects/Asset/fields/Id_audimetre__c.field-meta.xml
<CustomField>
    <fullName>Id_audimetre__c</fullName>
    <displayFormat>{00}</displayFormat>
    <externalId>true</externalId>
    <label>Id audimetre</label>
    <type>AutoNumber</type>
</CustomField>